tests/baselines/reference/requireOfJsonFileWithoutResolveJsonModuleAndPathMapping.errors.txt
/tsconfig.json(3,9): error TS5101: Option 'baseUrl' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
  Visit https://aka.ms/ts6 for migration information.
/a.ts(1,20): error TS2732: Cannot find module 'foo/bar/foobar.json'. Consider using '--resolveJsonModule' to import module with '.json' extension.


==== /tsconfig.json (1 errors) ====
    {
        "compilerOptions": {
            "baseUrl": ".",
            ~~~~~~~~~
!!! error TS5101: Option 'baseUrl' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
!!! error TS5101:   Visit https://aka.ms/ts6 for migration information.
            "paths": {
                "*": ["node_modules/*", "src/types"]
            },
            "allowJs": true,
            "outDir": "bin"
        }
    }
    
==== /a.ts (1 errors) ====
    import foobar from "foo/bar/foobar.json";
                       ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2732: Cannot find module 'foo/bar/foobar.json'. Consider using '--resolveJsonModule' to import module with '.json' extension.
    
==== /node_modules/foo/bar/foobar.json (0 errors) ====
    { "a": 10 }
    